# TGP

./: .gitignore  .gitmodules  CMakeLists.txt
Lab2/: CMakeLists.txt
Lab2/01-vector-add-explicit-memory/: 01-vector-add-explicit-memory.cu  CMakeLists.txt
Lab2/01-vector-add-unified-memory/: 01-vector-add-unified-memory.cu  CMakeLists.txt
Lab2/my_shared_vector_add/: CMakeLists.txt  main.cu
Report/: CMakeLists.txt  Cuda2DTexture.cpp  Cuda2DTexture.h  Pc2DTexture.cpp  Pc2DTexture.h  T1D.cu  T1D.cuh  T2D.cpp  T2D.cu  T2D.cuh  T2D.h  T2DImage.cpp  T2DImage.h  TexReadout2D.cu  TexReadout2D.cuh  main.cpp  main.cu
gpu_info/: CMakeLists.txt  gpu_info.cu
implot/: CMakeLists.txt
